--- a/heroe.css
+++ b/heroe.css
@@ -45,7 +45,7 @@
 }
 .heroe__botones-izq:hover{
   border: 1px solid white;
-  background-color: rgb(2, 185, 2)45;
+  background-color: rgb(2, 185, 2);
 }
 .heroe__botones-der{
   border: 1px solid white;
