--- a/heroe.css
+++ b/heroe.css
@@ -1,14 +1,28 @@
 .heroe{
   width: 100%;
   height: 380px;
-  margin:0 auto;
-  background-image:  url("img/ba1.jpg");
-  background-repeat: no-repeat;
-  background-size: 1200px 430px;
+  margin:80px auto;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  
+  background : url(./img/ba1.jpg) center / cover;
+  position   : relative;
+}
+.heroe::before{
+  content    : "";
+  background : black; 
+  display    : block;
+  position   : absolute;
+  width      : 100%;
+  height     : 100%;
+  opacity    : 0.6; 
+}
+.heroe__contenido{
+  z-index: 1;
+  display: flex;
+  justify-content: right;
+  flex-direction: column;
+  align-items: flex-end;
 }
 .heroe__titulo{
   margin-top: 120px;
